onboarding-for-wealth/300x250/main.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  font-family: "Source Sans Pro", sans-serif;
  margin: 0;
  padding: 0;
}

.text-light {
  font-weight: 300;
}

.line-height-lg {
  line-height: 1.3;
}

.line-height-sm {
  line-height: 1.1;
}

.text-bold {
  font-weight: 600;
}

.text-xl {
  font-size: 38px;
}

.text-lg {
  font-size: 35px;
}

.text-md {
  font-size: 28px;
}

.text-sm {
  font-size: 24px;
}

.d-flex {
  display: -ms-flexbox !important;
  display: flex !important;
}

.flex-grow {
  flex-grow: 1;
}

.flex-column {
  -ms-flex-direction: column !important;
  flex-direction: column !important;
}

.align-items-start {
  -ms-flex-align: start !important;
  align-items: start !important;
}

.justify-content-center {
  -ms-flex-pack: center !important;
  justify-content: center !important;
}

.aw_slide,
.aw_top-banner_logo {
  opacity: 0;
  left: -100px;
  position: relative;
  transition: left 1s, opacity 1s;
  -moz-transition: left 1s, opacity 1s;
  -o-transition: left 1s, opacity 1s;
  -webkit-transition: left 1s, opacity 1s;
  transform: translateZ(0);
}

.aw_slide {
  height: 100%;
  width: 100%;
}

.aw_slide > * {
  max-width: 100%;
}

.aw_slide.show,
.aw_top-banner_logo.show {
  opacity: 1;
  left: 0;
}

.hide {
  display: none !important;
}

#aw_ad.show-background {
  background-image: url(./assets/study.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}

